Added the header for the site, as well as starting on the Zelda section.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>
-         
-      </title>
+      <title>CJR - Games I've Played this Year</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+         <header>
+            <h1>Games that I have completed in 2023</h1>
+            <p>
+               I don't have many hobbies, and after running into some work related issues earlier this year (i.e. getting laid off), 
+               I've regressed into what I was during high school: a loser that only plays video games.  
+               So!  For this site I've decided to log how many games I have played through, or remember playing through, this year.  
+            </p>
+         </header>
+      <main>
+         <article>
+            <h3>The Legend of Zelda: Tears of the Kingdom</h3>
+            <p>
+               Starting off on a high, this is the big one folks.  
+               This is probably the best game I've played this year, or at least the best new game, and certainly the most memorable one.
+            </p>
+         </article>
+      </main>
    </body>
 </html>
