Finished Zelda section.  Also added FF and Overwatch sections.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
             <p>
                Starting off on a high, this is the big one folks.  
                This is probably the best game I've played this year, or at least the best new game, and certainly the most memorable one.
+               This game was addictive, it's a good thing I finished it weeks back because it was overtaking me.
+               I couldn't get away from it. It consumed me. So y'know it was pretty good I guess.
+            </p>
+         </article>
+         <article>
+            <h3>Final Fantasy I-V</h3>
+            <p>
+               I'm grouping all these together because I'm both lazy and economical. I played through the first five numbered Final Fantasy games earlier this year and I'm inclined to say that it was a mistake.
+               Not that the games were bad, gentle reader, just that they are so similar to each other that I needed to space these out way more to prevent burnout. Alas, burnout was not prevented.
+               Definitely taking a break before I jump into VI, the last one I haven't played yet.
+            </p>
+         </article>
+         <article>
+            <h3>Overwatch 2</h3>
+            <p>
+               I play this because it's the only game that both me and my friends play. I don't have much to say. It's not good. 
+               Maybe I need more friends in addition to more hobbies...
             </p>
          </article>
       </main>
