Added images to the HTML for each entry.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
                I've regressed into what I was during high school: a loser that only plays video games.  
                So!  For this site I've decided to log how many games I have played through, or remember playing through, this year.  
             </p>
+            <ol>
+               <b>Here is the list of games:</b>
+               <li>The Legend of Zelda: Tears of the Kingdom</li>
+               <li>Final Fantasy I-V</li>
+               <li>Final Fantasy IX</li>
+               <li>Overwatch 2</li>
+            </ol>
          </header>
       <main>
          <article>
+            <figure>
+               <img src = "/images/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt = "The Legend of Zelda: Tears of the Kingdom Key Art">
+            </figure>
             <h3>The Legend of Zelda: Tears of the Kingdom</h3>
             <p>
                Starting off on a high, this is the big one folks.  
@@ -24,6 +34,9 @@
             </p>
          </article>
          <article>
+            <figure>
+               <img src = "/images/final-fantasy-pixel-remaster-cjx9496cw.jpg" alt = "Final Fantasy Pixel Remaster Logo">
+            </figure>
             <h3>Final Fantasy I-V</h3>
             <p>
                I'm grouping all these together because I'm both lazy and economical. I played through the first five numbered Final Fantasy games earlier this year and I'm inclined to say that it was a mistake.
@@ -32,6 +45,20 @@
             </p>
          </article>
          <article>
+            <figure>
+               <img src = "/images/home-background.jpg" alt = "Final Fantasy IX Key Art">
+            </figure>
+            <h3>Final Fantasy IX</h3>
+            <p>
+               I've been on a Final Fantasy kick for the past year so this also gets included in this list.
+               This one was okay for the most part but was also kinda boring.  I hate being bored when playing games the most, 
+               so the slow pace of battles didn't endear me to the game unfortunately.
+            </p>
+         </article>
+         <article>
+            <figure>
+               <img src = "/images/Overwatch_2_full_logo.svg.png" alt = "Overwatch 2 Logo">
+            </figure>
             <h3>Overwatch 2</h3>
             <p>
                I play this because it's the only game that both me and my friends play. I don't have much to say. It's not good. 
@@ -39,5 +66,11 @@
             </p>
          </article>
       </main>
+      <footer>
+         <figure>
+            <img>
+         </figure>
+         <p>Copyright &copy and &reg CJR All Rights Reserved</p>
+      </footer>
    </body>
 </html>
