Added section on Theatrhythm FBR.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                <li>The Legend of Zelda: Tears of the Kingdom</li>
                <li>Final Fantasy I-V</li>
                <li>Final Fantasy IX</li>
+               <li>Theatrhythm Final Bar Line</li>
                <li>Overwatch 2</li>
             </ol>
          </header>
@@ -53,6 +54,17 @@
                I've been on a Final Fantasy kick for the past year so this also gets included in this list.
                This one was okay for the most part but was also kinda boring.  I hate being bored when playing games the most, 
                so the slow pace of battles didn't endear me to the game unfortunately.
+            </p>
+         </article>
+         <article>
+            <figure>
+               <img src = "/images/Theatrhythm_Final_Bar_Line_Logo.png" alt = "Theatrhythm Final Bar Line Logo">
+            </figure>
+            <h3>Theatrhythm Final Bar Line</h3>
+            <p>
+               Lo and behold, another Final Fantasy game on this list.  This one is a rhythm game, a genre that I am quite fond of but not particularly good at.
+               I would say that this would be my #2 of the year with the main complaint being just how daunting the song list is.
+               There are over 500 songs in total to play through and, suffice to say, it is a lot of music to get through.
             </p>
          </article>
          <article>
