Started on styles.css sheet and added required aspects from the rules.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
    <head>
       <title>CJR - Games I've Played this Year</title>
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
       <!-- Write your HTML in this file! -->
-         <header>
+         <header id="mainHeading">
             <h1>Games that I have completed in 2023</h1>
             <p>
                I don't have many hobbies, and after running into some work related issues earlier this year (i.e. getting laid off), 
@@ -28,7 +29,7 @@
                <img src = "/images/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt = "The Legend of Zelda: Tears of the Kingdom Key Art">
             </figure>
             <h3>The Legend of Zelda: Tears of the Kingdom</h3>
-            <p>
+            <p id="testP" class="funParagraph">
                Starting off on a high, this is the big one folks.  
                This is probably the best game I've played this year, or at least the best new game, and certainly the most memorable one.
                This game was addictive, it's a good thing I finished it weeks back because it was overtaking me.
