Added sections for each entry in the style.css and formatted images to the best of my ability.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       <!-- Write your HTML in this file! -->
          <header id="mainHeading">
             <h1>Games that I have completed in 2023</h1>
-            <p>
+            <p id="headerParagraph" class="redParagraph">
                I don't have many hobbies, and after running into some work related issues earlier this year (i.e. getting laid off), 
                I've regressed into what I was during high school: a loser that only plays video games.  
                So!  For this site I've decided to log how many games I have played through, or remember playing through, this year.  
             </p>
-            <ol>
+            <ul>
                <b>Here is the list of games:</b>
                <br>
                <li>The Legend of Zelda: Tears of the Kingdom</li>
@@ -21,12 +21,12 @@
                <li>Final Fantasy IX</li>
                <li>Theatrhythm Final Bar Line</li>
                <li>Overwatch 2</li>
-            </ol>
+            </ul>
          </header>
       <main>
-         <article>
+         <article id="zelda-part">
             <figure>
-               <img src = "/images/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt = "The Legend of Zelda: Tears of the Kingdom Key Art">
+               <img class="zelda-image float-right image-border" src = "/images/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt = "The Legend of Zelda: Tears of the Kingdom Key Art">
             </figure>
             <h3>The Legend of Zelda: Tears of the Kingdom</h3>
             <p id="testP" class="funParagraph">
@@ -36,9 +36,9 @@
                I couldn't get away from it. It consumed me. So y'know it was pretty good I guess.
             </p>
          </article>
-         <article>
+         <article id="pixel-part">
             <figure>
-               <img src = "/images/final-fantasy-pixel-remaster-cjx9496cw.jpg" alt = "Final Fantasy Pixel Remaster Logo">
+               <img class="pixel-image float-right image-border" src = "/images/final-fantasy-pixel-remaster-cjx9496cw.jpg" alt = "Final Fantasy Pixel Remaster Logo">
             </figure>
             <h3>Final Fantasy I-V</h3>
             <p>
@@ -47,9 +47,9 @@
                Definitely taking a break before I jump into VI, the last one I haven't played yet.
             </p>
          </article>
-         <article>
+         <article id="nine-part">
             <figure>
-               <img src = "/images/home-background.jpg" alt = "Final Fantasy IX Key Art">
+               <img class="nine-image float-right image-border" src = "/images/home-background.jpg" alt = "Final Fantasy IX Key Art">
             </figure>
             <h3>Final Fantasy IX</h3>
             <p>
@@ -58,9 +58,9 @@
                so the slow pace of battles didn't endear me to the game unfortunately.
             </p>
          </article>
-         <article>
+         <article id="theatre-part">
             <figure>
-               <img src = "/images/Theatrhythm_Final_Bar_Line_Logo.png" alt = "Theatrhythm Final Bar Line Logo">
+               <img class="theatre-image float-right image-border" src = "/images/Theatrhythm_Final_Bar_Line_Logo.png" alt = "Theatrhythm Final Bar Line Logo">
             </figure>
             <h3>Theatrhythm Final Bar Line</h3>
             <p>
@@ -69,9 +69,9 @@
                There are over 500 songs in total to play through and, suffice to say, it is a lot of music to get through.
             </p>
          </article>
-         <article>
+         <article id="overwatch-part">
             <figure>
-               <img src = "/images/Overwatch_2_full_logo.svg.png" alt = "Overwatch 2 Logo">
+               <img class="overwatch-image float-right image-border" src = "/images/Overwatch_2_full_logo.svg.png" alt = "Overwatch 2 Logo">
             </figure>
             <h3>Overwatch 2</h3>
             <p>
