Changed 'zelda' into 'totk' for those specific articles and images.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </ul>
          </header>
       <main>
-         <article id="zelda-part">
+         <article id="totk-part">
             <figure>
-               <img class="zelda-image float-right image-border" src = "/images/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt = "The Legend of Zelda: Tears of the Kingdom Key Art">
+               <img class="totk-image float-right image-border" src = "/images/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt = "The Legend of Zelda: Tears of the Kingdom Key Art">
             </figure>
             <h3>The Legend of Zelda: Tears of the Kingdom</h3>
             <p id="testP" class="funParagraph">
